# romman

./: .clang-format  .gitignore  CMakeLists.txt  README.md  mingw-w64-x86_64.cmake  scriptlang.md
.github/workflows/: ci.yml
include/: ELF.h  debug.h  main.h  rom.h  romman-errno.h  utils.h  version.h
scripts/rebuild/: rebuildrom.bat
src/: main.cpp  rom.cpp  utils.cpp
